Made some modifications to 047. Trying to figure out which one is fastest.

--- a/ProjectEuler/Makefile
+++ b/ProjectEuler/Makefile
@@ -10,7 +10,7 @@ tests: $(EXECUTABLES) $(TESTS)
 timed: $(EXECUTABLES) $(TIMED)
 
 clean:
-	rm -f *.o *.hi *.exe
+	rm -f *.o *.hi *.exe a.out
 
 %.test: %.exe
 	@printf "%s %s\n" $* $(shell ./$<)
