--- a/project-euler/project-euler.cabal
+++ b/project-euler/project-euler.cabal
@@ -148,7 +148,8 @@ test-suite project-euler-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      tests
   main-is:             Tasty.hs
-  other-modules:       Problems.P001Test
+  other-modules:       Util.PrimeTest
+                     , Problems.P001Test
                      , Problems.P002Test
                      , Problems.P003Test
                      , Problems.P004Test
@@ -264,6 +265,7 @@ test-suite project-euler-test
                      , project-euler
                      , tasty
                      , tasty-discover
+                     , array
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
