Update tests for P040 -- P049

--- a/project-euler/project-euler.cabal
+++ b/project-euler/project-euler.cabal
@@ -190,7 +190,7 @@ test-suite project-euler-test
                      , Problems.P039Test
                      , Problems.P040Test
                      , Problems.P041Test
-                     , Problems.P042Test
+                     , Problems.P042Test , TestData.P042
                      , Problems.P043Test
                      , Problems.P044Test
                      , Problems.P045Test
