--- a/project-euler/project-euler.cabal
+++ b/project-euler/project-euler.cabal
@@ -15,6 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
+  ghc-options:         -O2
   build-depends:       base >= 4.7 && < 5
                      , array >= 0.5
                      , containers >= 0.5
