--- a/project-euler/project-euler.cabal
+++ b/project-euler/project-euler.cabal
@@ -90,6 +90,7 @@ library
                      , Problems.P071
                      , Problems.P072
                      , Problems.P073
+                     , Problems.P074
                      , Problems.P076
                      , Problems.P077
                      , Problems.P079
@@ -221,6 +222,7 @@ test-suite project-euler-test
                      , Problems.P071Test
                      , Problems.P072Test
                      , Problems.P073Test
+                     , Problems.P074Test
                      , Problems.P076Test
                      , Problems.P077Test
                      , Problems.P079Test , TestData.P079
