Solve P173, math is kind of ugly

--- a/project-euler/project-euler.cabal
+++ b/project-euler/project-euler.cabal
@@ -121,6 +121,7 @@ library
                      , Problems.P150
                      , Problems.P157
                      , Problems.P164
+                     , Problems.P173
                      , Problems.P178
                      , Problems.P181
                      , Problems.P183
@@ -255,6 +256,7 @@ test-suite project-euler-test
                      , Problems.P150Test
                      , Problems.P157Test
                      , Problems.P164Test
+                     , Problems.P173Test
                      , Problems.P178Test
                      , Problems.P181Test
                      , Problems.P183Test
